# oceanbench

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  codecov.yaml  genindex.html  index.html  intro.html  make_  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: book.yaml  pytest.yaml  test.yaml
_sources/: markdown-notebooks.ipynb
_sources/content/: overview.md
_sources/content/geoprocess/: gridded_data.ipynb  gridded_data.md  (+2 more)
conf/: __init__.py
config/: funcs.yaml  main.yaml
config/data/: gf_gridded.yaml  gridded.yaml  nadir_2017.yaml  osse_natl60_gridded.yaml
config/dataset/: example_osse.yaml  example_osse_gf_nadir.yaml
config/leaderboard/: ose_gf.yaml  osse_gf.yaml
config/metrics/: lib.yaml  ose_gf.yaml  osse_gf.yaml
config/plots/: gfmaps.yaml  lib.yaml  mapspsd.yaml
config/processing/: lib.yaml  ose_gf_results.yaml  osse_gf_results.yaml  pipe.yaml  rollout.yaml
content/: overview.html
content/alongtrack/: AlongTrack.html  AlongTrack_Eval.html  AlongTrack_SWOT.html
content/data_challenges/: dc20a.html  dc21a.html  dc23a.html
content/geoprocess/: gridded_data.html  physical_variables.html  scaling.html
content/getting_started/: Leaderboards.html  TaskToPatcher.html  ocean_bench_4dvarnet.html  pytorch_dataset_integration_example.html
content/metrics/: power_spectrum.html  power_spectrum_score.html
content/ml/: pytorch_dataset.html  xrdataset.html
content/viz/: pixel_densities.html
docs/: tutorial_dvc.md
environments/: linux.yaml  macos.yaml  requirements-docs.txt  test.yaml
experiments/dc20a/: README.md  evaluation.py  main.py  postprocess.py  preprocess.py
experiments/dc21a/: README.md  evaluation.py  main.py  preprocess.py  utils.py
jbook/: _config.yml  _toc.yml  requirements.txt
jbook/content/: overview.md
notebooks/: Leaderboards.ipynb  TaskToPatcher.ipynb  gridded_data.ipynb  pytorch_dataset_integration_example.ipynb  xrdataset.ipynb
oceanbench/: __init__.py  __main__.py
oceanbench/conf/: __init__.py
(+199 files in other folders)
